Deixando site em ingles

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Um aplicativo web baseado na API pública do Spotify"
+      content="A webapp made by Luiz Chaves using a Spotify public API"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo128.png" />
     <!--
@@ -27,7 +27,7 @@
     <title>Spotify by Luiz Chaves</title>
   </head>
   <body>
-    <noscript>Você precisa de Jabascript para utilizar este site.</noscript>
+    <noscript>You need to enable JavaScript to run this app</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
